fixed sliding gallery caption on mobile

--- a/site/themes/bxb/static/less/styles.less
+++ b/site/themes/bxb/static/less/styles.less
@@ -476,6 +476,13 @@ a:hover {
                 padding: 10px;
                 position: absolute;
 
+                @media (max-width: 767px) {
+                  position: relative;
+                      left: 0px;
+                      bottom: 0px;
+                      padding: 0px 20px;                }
+
+
                 h4 {
                     color: #fff;
                     text-align: left;
